--- a/InitialProject/InitialProject/View/Guest1/AccountSettingsPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/AccountSettingsPage.xaml
@@ -7,7 +7,7 @@
       mc:Ignorable="d" Height="516" Width="1319"
     >
     <Canvas Background="White">
-        <Button x:Name="Logout" Content="Log out" Height="32" Width="139" FontSize="20" Canvas.Left="1167" Canvas.Top="422" Click="LogoutClick" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Button x:Name="Logout" Content="Log out" Height="32" Width="139" FontSize="20" Canvas.Left="1170" Canvas.Top="482" Click="LogoutClick" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Period of time you want check:" FontSize="20" Canvas.Left="932" Canvas.Top="6" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="-" FontSize="20" Canvas.Left="1102" Canvas.Top="45" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <DatePicker Canvas.Left="936" Canvas.Top="48" FontSize="20" Width="160" HorizontalAlignment="Center" VerticalAlignment="Top"/>
