--- a/InitialProject/InitialProject/View/Guest2/CreatingTourRequest.xaml
+++ b/InitialProject/InitialProject/View/Guest2/CreatingTourRequest.xaml
@@ -6,32 +6,40 @@
         xmlns:local="clr-namespace:TravelAgency.View.Guest2"
         mc:Ignorable="d"
         Title="CreatingTourRequest" Height="450" Width="800">
-    <Grid>
-        <Label Content="{Binding Path=CityV, UpdateSourceTrigger=PropertyChanged}"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,69,0,0"/>
-        <Label Content="{Binding Path=CountryV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,92,0,0"/>
-        <Label Content="{Binding Path=DescriptionV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,119,0,0"/>
-        <Label Content="{Binding Path=LanguageV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,142,0,0"/>
-        <Label Content="{Binding Path=MaxGuestsV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="268,164,0,0"/>
+    <Grid Margin="2,-2,-2,2">
+        <Label Content="{Binding Path=CityV, UpdateSourceTrigger=PropertyChanged}"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="119,122,0,0"/>
+        <Label Content="{Binding Path=CountryV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="466,142,0,0"/>
+        <Label Content="{Binding Path=DescriptionV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="273,172,0,0"/>
+        <Label Content="{Binding Path=LanguageV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="273,195,0,0"/>
+        <Label Content="{Binding Path=MaxGuestsV, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="103" Height="18" Foreground="Red" FontSize="10" Margin="273,217,0,0"/>
 
-        <Button Content="Save" HorizontalAlignment="Left" Margin="106,291,0,0" VerticalAlignment="Top" Click="SaveTourRequest"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="166,291,0,0" VerticalAlignment="Top" Click="Cancel"/>
-        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Margin="106,69,0,0" TextWrapping="Wrap"  Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120" TextChanged="CityValidation"/>
-        <TextBox x:Name="txtCountry" HorizontalAlignment="Left" Margin="106,92,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtDescription" HorizontalAlignment="Left" Margin="106,115,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtLanguage" HorizontalAlignment="Left" Margin="106,138,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtMaxNumberOfGuests" HorizontalAlignment="Left" Margin="106,161,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <DatePicker x:Name="FirstDateBox" HorizontalAlignment="Left" Margin="115,202,0,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="SecondDateBox" HorizontalAlignment="Left" Margin="115,231,0,0" VerticalAlignment="Top"/>
+        <Button Content="Create a request" HorizontalAlignment="Center" Margin="0,322,0,0" VerticalAlignment="Top" Click="SaveTourRequest" Height="44" Width="204"/>
+        <Button Content="Cancel" HorizontalAlignment="Center" Margin="0,404,0,0" VerticalAlignment="Top" Click="Cancel"/>
+        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Margin="114,142,0,0" TextWrapping="Wrap"  
+                 Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtCountry" HorizontalAlignment="Left" Margin="316,142,0,0" TextWrapping="Wrap" 
+                 Text="{Binding Path=Country, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtDescription" HorizontalAlignment="Left" Margin="114,166,0,0" TextWrapping="Wrap" 
+                 Text="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtLanguage" HorizontalAlignment="Left" Margin="114,189,0,0" TextWrapping="Wrap"
+                 Text="{Binding Path=Language, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtMaxNumberOfGuests" HorizontalAlignment="Left" Margin="114,212,0,0" TextWrapping="Wrap"
+                 Text="{Binding Path=Max, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120" />
+        <DatePicker x:Name="FirstDateBox" HorizontalAlignment="Left" Margin="114,235,0,0" VerticalAlignment="Top"/>
+        <DatePicker x:Name="SecondDateBox" HorizontalAlignment="Left" Margin="114,264,0,0" VerticalAlignment="Top"/>
 
-        <Label Content="Description" HorizontalAlignment="Left" Margin="29,111,0,0" VerticalAlignment="Top"/>
-        <Label Content="Laguage" HorizontalAlignment="Left" Margin="37,134,0,0" VerticalAlignment="Top"/>
-        <Label Content="Max Guests" HorizontalAlignment="Left" Margin="27,156,0,0" VerticalAlignment="Top"/>
-        <Label Content="City" HorizontalAlignment="Left" Margin="58,65,0,0" VerticalAlignment="Top"/>
-        <Label Content="Country" HorizontalAlignment="Left" Margin="46,88,0,0" VerticalAlignment="Top"/>
-        <Label Content="Start Date" HorizontalAlignment="Left" Margin="39,201,0,0" VerticalAlignment="Top"/>
-        <Label Content="End Date" HorizontalAlignment="Left" Margin="39,232,0,0" VerticalAlignment="Top"/>
+        <Label Content="Description:" HorizontalAlignment="Left" Margin="32,159,0,0" VerticalAlignment="Top"/>
+        <Label Content="Laguage:" HorizontalAlignment="Left" Margin="47,182,0,0" VerticalAlignment="Top"/>
+        <Label Content="Max Guests:" HorizontalAlignment="Left" Margin="29,0,0,0" VerticalAlignment="Center"/>
+        <Label Content="City:" HorizontalAlignment="Left" Margin="70,135,0,0" VerticalAlignment="Top"/>
+        <Label Content="Country:" HorizontalAlignment="Left" Margin="252,137,0,0" VerticalAlignment="Top"/>
+        <Label Content="Start Date:" HorizontalAlignment="Left" Margin="38,234,0,0" VerticalAlignment="Top"/>
+        <Label Content="End Date:" HorizontalAlignment="Left" Margin="42,265,0,0" VerticalAlignment="Top"/>
         <Button Content="Exit" HorizontalAlignment="Left" Margin="727,360,0,0" VerticalAlignment="Top" Click="Exit" Width="47" Height="33"/>
-        
+        <Label Content="Location :" HorizontalAlignment="Left" Margin="39,109,0,0" VerticalAlignment="Top"/>
+        <Button Content="Create a complex tour request" HorizontalAlignment="Center" Margin="0,371,0,0" VerticalAlignment="Top" Height="28" Width="168"/>
+        <Label Content="Create a Tour Request" HorizontalAlignment="Center" FontSize="30" Margin="0,50,0,0" VerticalAlignment="Top"/>
+
 
     </Grid>
 </Window>
