--- a/InitialProject/InitialProject/View/Guest2/GuestOnTour.xaml
+++ b/InitialProject/InitialProject/View/Guest2/GuestOnTour.xaml
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="GuestOnTour" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="DataPanel" HorizontalAlignment="Center" Height="198" Margin="0,82,0,0" VerticalAlignment="Top" Width="458" Loaded="LoadData"/>
-        <Label Content="Select a tour to start." HorizontalAlignment="Center" Height="28" Margin="0,36,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Confirm arrival" HorizontalAlignment="Left" Height="29" Margin="495,333,0,0" VerticalAlignment="Top" Click="ConfirmArrival" Width="96" RenderTransformOrigin="1.708,0.439"/>
+        <DataGrid x:Name="DataPanel" HorizontalAlignment="Center" Height="89" VerticalAlignment="Center" Width="458" Loaded="LoadData"/>
+        <Label Content="Select a tour to start." HorizontalAlignment="Left" Height="28" Margin="171,131,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Confirm arrival" HorizontalAlignment="Center" Height="29" Margin="0,395,0,0" VerticalAlignment="Top" Click="ConfirmArrival" Width="96" RenderTransformOrigin="1.708,0.439"/>
         <Button Content="Exit" HorizontalAlignment="Left" Height="27" Margin="687,367,0,0" VerticalAlignment="Top" Click="Exit" Width="61"/>
-        <DataGrid x:Name="KeyPoints" Margin="171,304,364,44"/>
-        <Button Content="Show Tour" HorizontalAlignment="Left" Height="26" Margin="651,234,0,0" VerticalAlignment="Top" Width="67" Click="Button_Click"/>
-
+        <DataGrid x:Name="KeyPoints" Margin="268,309,268,48"/>
+        <Button Content="Show Tour" HorizontalAlignment="Center" Height="26" Margin="0,267,0,0" VerticalAlignment="Top" Width="68" Click="Button_Click"/>
+        <Label Content="Active Tours" HorizontalAlignment="Center" FontSize="30" Margin="0,65,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
