--- a/InitialProject/InitialProject/View/Owner/OwnerHomeView.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerHomeView.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="OwnerHome" Height="768" Width="1024" WindowStartupLocation="CenterScreen">
     <Grid>
-        <DataGrid x:Name="DataPanel" Height="677" Width="1024" HorizontalAlignment="Center" Canvas.Top="75" VerticalAlignment="Top" Margin="0,74,0,0" Loaded="OnLoad" FontSize="20"/>
+        <DataGrid x:Name="DataPanel" Height="677" Width="1024" HorizontalAlignment="Center" Canvas.Top="75" VerticalAlignment="Top" Margin="0,74,0,0" Loaded="OnLoad" FontSize="14"/>
         <Button Content="Home" Height="75" Width="201" FontSize="17" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="101,0,0,0" Click="HomeButton"/>
         <Button x:Name="AccommodationDropBTN" Content="Accommodation" Canvas.Left="242" Height="75" Width="183" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="17" Margin="300,0,0,0" Click="AccommodationDrop"/>
         <Button x:Name="MediaDropBTN" Content="Media" Canvas.Left="455" Height="75" Width="256" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="17" Canvas.Top="1" Margin="482,0,0,0" Click="MediaDrop"/>
@@ -37,10 +37,10 @@
         <Button x:Name="GradeGuestBTN" Visibility="Hidden"  Content="Grade Guest" HorizontalAlignment="Left" VerticalAlignment="Top" Height="56" Width="299" Click="OpenGradeForm" Canvas.Left="1081" Canvas.Top="123" FontSize="17" Margin="0,75,0,0" />
         <Button x:Name="ReviewFormBTN"  Visibility="Hidden" Content="Review Form" HorizontalAlignment="Left" VerticalAlignment="Top" Height="57" Width="361" Click="OpenReviewForm" Canvas.Left="1081" Canvas.Top="163" FontSize="17" Margin="299,74,0,0" />
         <Button x:Name="ForumsBTN" Visibility="Hidden"  Content="Forums" HorizontalAlignment="Left" VerticalAlignment="Top" Height="57" Width="364" Canvas.Left="1081" Canvas.Top="163" FontSize="17" Margin="660,74,0,0" />
-        <Image HorizontalAlignment="Left" Height="75" VerticalAlignment="Top" Width="101" Source="/View/Owner/back.png" Stretch="Fill"/>
-
-
-
-
+        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="74" Width="101" Click="BackButton">
+            <Button.Background>
+                <ImageBrush ImageSource="/View/Owner/back.png"/>
+            </Button.Background>
+        </Button>
     </Grid>
 </Window>
