--- a/InitialProject/InitialProject/View/Owner/StatisticPdfView.xaml
+++ b/InitialProject/InitialProject/View/Owner/StatisticPdfView.xaml
@@ -8,9 +8,8 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="StatisticPdf">
 
-    <Grid Background="White">
-        <Label Content="Label" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="Label" HorizontalAlignment="Center" Margin="0,67,0,0" VerticalAlignment="Top" Height="350" Width="724"/>
+    <Grid Background="White" Loaded="OnLoad">
+        <Label Content="Skontaj kako rade pdf-ovi" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50"/>
 
     </Grid>
 </Page>
