--- a/InitialProject/InitialProject/View/Guest1/VisitedAccommodationsPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/VisitedAccommodationsPage.xaml
@@ -20,7 +20,7 @@
         <DataGrid x:Name="DataPanel" Loaded="OnLoad" FontSize="16" Height="212" Canvas.Left="27" Canvas.Top="304" Width="1267" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Label Content="How owners rated you:" FontSize="20" Canvas.Left="28" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Visited accommodations:" FontSize="20" Canvas.Left="29" Canvas.Top="-5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <DataGrid x:Name="ShowVisited" FontSize="16" Height="194" Width="1266" Canvas.Left="28" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="LoadVisited">
+        <DataGrid x:Name="ShowVisited" AutoGenerateColumns="False" FontSize="16" Height="194" Width="1266" Canvas.Left="28" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="LoadVisited">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Hotel Name" Binding="{Binding HotelName}" />
                 <DataGridTextColumn Header="City" Binding="{Binding City}" />
